Handle contact form via mailto on submit

--- a/index.html
+++ b/index.html
@@ -237,20 +237,20 @@
              Phone: <a href="tel:+447868258209">+44 7868 258 209</a></p>
           <p><a class="btn btn-primary" href="#calendly">Request a demo via Calendly</a></p>
         </div>
-        <form id="contact-form">
-          <div>
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text" placeholder="Your name">
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="you@company.com">
-          </div>
+          <form id="contact-form">
+            <div>
+              <label for="name">Name</label>
+              <input id="name" name="name" type="text" placeholder="Your name">
+            </div>
+            <div>
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" placeholder="you@company.com">
+            </div>
             <div>
               <label for="message">Project details</label>
               <textarea id="message" name="message" placeholder="Tell us about your Sage 50 + Stream setup"></textarea>
             </div>
-          <button class="btn btn-primary" type="button" id="sendMessage">Send Message</button>
+          <button class="btn btn-primary" type="submit" id="sendMessage">Send Message</button>
         </form>
       </div>
       <div id="calendly" style="margin-top:18px;">
@@ -275,15 +275,18 @@
   </footer>
   <script>
     (function() {
-      const btn = document.getElementById('sendMessage');
-      if (!btn) return;
-      btn.addEventListener('click', function() {
+      const form = document.getElementById('contact-form');
+      if (!form) return;
+      form.addEventListener('submit', function(e) {
+        e.preventDefault();
         const name = (document.getElementById('name')?.value || '').trim() || 'Not provided';
         const email = (document.getElementById('email')?.value || '').trim() || 'Not provided';
         const message = (document.getElementById('message')?.value || '').trim() || 'Not provided';
         const subject = encodeURIComponent(`New enquiry from ${name}`);
         const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\nMessage:\n${message}`);
-        window.location.href = `mailto:matthew@sage50streamintegration.co.uk?subject=${subject}&body=${body}`;
+        const mailtoUrl = `mailto:matthew@sage50streamintegration.co.uk?subject=${subject}&body=${body}`;
+        window.location.href = mailtoUrl;
+        window.open(mailtoUrl, '_blank');
       });
     })();
   </script>
