--- a/landing.html
+++ b/landing.html
@@ -240,18 +240,18 @@
           <form id="contact-form">
             <div>
               <label for="name">Name</label>
-              <input id="name" name="name" type="text" placeholder="Your name">
+              <input id="name" name="name" type="text" placeholder="Your name" required>
             </div>
             <div>
               <label for="email">Email</label>
-              <input id="email" name="email" type="email" placeholder="you@company.com">
+              <input id="email" name="email" type="email" placeholder="you@company.com" required>
             </div>
             <div>
               <label for="message">Project details</label>
-              <textarea id="message" name="message" placeholder="Tell us about your Sage 50 + Stream setup"></textarea>
+              <textarea id="message" name="message" placeholder="Tell us about your Sage 50 + Stream setup" required></textarea>
             </div>
-          <button class="btn btn-primary" type="submit" id="sendMessage">Send Message</button>
-        </form>
+            <button class="btn btn-primary" type="submit" id="sendMessage">Send Message</button>
+          </form>
       </div>
       <div id="calendly" style="margin-top:18px;">
         <!-- Calendly inline widget begin -->
@@ -285,8 +285,12 @@
         const subject = encodeURIComponent(`New enquiry from ${name}`);
         const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\nMessage:\n${message}`);
         const mailtoUrl = `mailto:matthew@sage50streamintegration.co.uk?subject=${subject}&body=${body}`;
-        window.location.href = mailtoUrl;
-        window.open(mailtoUrl, '_blank');
+        const tempLink = document.createElement('a');
+        tempLink.href = mailtoUrl;
+        tempLink.style.display = 'none';
+        document.body.appendChild(tempLink);
+        tempLink.click();
+        tempLink.remove();
       });
     })();
   </script>
