--- a/sage50UK_stream_integration/landing.html
+++ b/sage50UK_stream_integration/landing.html
@@ -135,19 +135,19 @@
           <div class="icon"><i class="fa-solid fa-cloud-arrow-up"></i></div>
           <h3>Stream Order Creation via API</h3>
           <p>Create Stream orders via secure API (not WebXL) for deeper customization, fewer errors, and higher speed. Supports weight, cube, and extended attributes to improve auto-planning accuracy.</p>
-          <a class="btn btn-secondary" href="stream_order_creation.html">View details</a>
+          <a class="btn btn-secondary" href="stream_order_creation.html">Explore Full Package</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-boxes-stacked"></i></div>
           <h3>Single Stock Location</h3>
           <p>Live stock as goods move in and out on Sage, PO's uploaded and completed on Stream to keep track of Goods-In, scheduled stock alerts, and optional auto-PO placementand admin time savings.</p>
-          <a class="btn btn-secondary" href="single_stock_location.html">View details</a>
+          <a class="btn btn-secondary" href="single_stock_location.html">Explore Full Package</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-warehouse"></i></div>
           <h3>Multiple Stock Locations</h3>
           <p>Everything in Single Stock plus multi-location product codes by department, stock transfer flows between warehouses, and safeguards to keep stock accurate when ordering from one depot and fulfilling from another.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <a class="btn btn-secondary" href="#contact">Explore Full Package</a>
         </div>
       </div>
 
@@ -155,20 +155,20 @@
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-file-pen"></i></div>
           <h3>Custom Order Form</h3>
-          <p>Standardize how sales orders enter Sage 50. Use analysis fields for custom info, with a consultation to tailor the form to your process.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <p>Standardize how sales orders enter Sage 50 with a custom look and feel and added automations.</p>
+          <a class="btn btn-secondary" href="#contact">Discuss</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-right-left"></i></div>
           <h3>2-Way Communication</h3>
           <p>Keep fields aligned when events happen: tracking link into Sage on order create, required date updates, notes sync etc.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <a class="btn btn-secondary" href="#contact">Discuss</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
           <h3>Invoicing & Automations</h3>
           <p>Automate invoicing when orders complete, trigger stock ordering, automate sending emails and more.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <a class="btn btn-secondary" href="#contact">Discuss</a>
         </div>
       </div>
       <div class="grid" style="margin-top:18px;">
@@ -176,13 +176,13 @@
           <div class="icon"><i class="fa-solid fa-clipboard-list"></i></div>
           <h3>Logging</h3>
           <p>Comprehensive logging of data and files to the cloud plus spreadsheet exports for complete traceability.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <a class="btn btn-secondary" href="#contact">Discuss</a>
         </div>
         <div class="feature-card">
           <div class="icon"><i class="fa-solid fa-screwdriver-wrench"></i></div>
           <h3>Miscellaneous Custom Functions</h3>
           <p>Backdate stock take, update multiple price lists with one product, and many more bespoke functions tailored to your Sage 50 + Stream + Zynk setup.</p>
-          <a class="btn btn-secondary" href="#contact">View details / discuss</a>
+          <a class="btn btn-secondary" href="#contact">Discuss</a>
         </div>
       </div>
     </section>
@@ -233,24 +233,16 @@
       <div class="cta-card">
         <div>
           <p style="margin-top:0;">Ready to see it in action? Contact us for a demo or more information. From here We'll be able to understand your business and needs better and tailor the approach to suit you.</p>
-          <p>Email: <a href="mailto:matthew@sage50streamintegration.co.uk">matthew.n.77@gmail.com</a><br>
+          <p>Email: <a href="mailto:matthew@sage50streamintegration.co.uk">matthew@sage50streamintegration.co.uk</a><br>
              Phone: <a href="tel:+447868258209">+447868258209</a></p>
+          <p><a class="btn btn-primary" href="#calendly">Request a demo via Calendly</a></p>
         </div>
-        <form>
-          <div>
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text" placeholder="Your name">
-          </div>
-          <div>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" placeholder="you@company.com">
-          </div>
-          <div>
-            <label for="message">Project details</label>
-            <textarea id="message" name="message" placeholder="Tell us about your Sage 50 + Stream setup"></textarea>
-          </div>
-          <button class="btn btn-primary" type="submit">Request a demo</button>
-        </form>
+        <div id="calendly" style="margin-top:8px;">
+          <!-- Calendly inline widget begin -->
+          <div class="calendly-inline-widget" data-url="https://calendly.com/matthew-sage50streamintegration/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+          <!-- Calendly inline widget end -->
+        </div>
       </div>
     </section>
   </main>
